[gd_scene load_steps=19 format=2]

[ext_resource path="res://Images/Sprites/livre_ouvert2.png" type="Texture" id=1]
[ext_resource path="res://scenes/livre_ouvert.gd" type="Script" id=2]
[ext_resource path="res://Images/Sprites/fleche_droite.png" type="Texture" id=4]
[ext_resource path="res://Images/Sprites/fleche_droite_hover.png" type="Texture" id=5]
[ext_resource path="res://Images/Sprites/fleche_gauche_hover.png" type="Texture" id=6]
[ext_resource path="res://Images/Sprites/fleche_gauche.png" type="Texture" id=7]
[ext_resource path="res://font/SparkyStonesRegular-BW6ld.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Images/Sprites/croix_quitter.png" type="Texture" id=9]
[ext_resource path="res://Images/Sprites/accueil.png" type="Texture" id=10]
[ext_resource path="res://Images/Sprites/accueil_hover.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=7]
size = 17
extra_spacing_bottom = 2
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=8]
size = 17
extra_spacing_bottom = 2
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
size = 23
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.176471, 0.431373, 0.45098, 1 )
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.176471, 0.431373, 0.45098, 1 )
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.454902, 0.654902, 0.65098, 1 )
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 70
extra_spacing_bottom = 20
font_data = ExtResource( 8 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="LivreOuvert2" type="Sprite" parent="."]
position = Vector2( 518, 283 )
scale = Vector2( 0.751465, 0.662152 )
texture = ExtResource( 1 )

[node name="Maladie_1" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 214.0
margin_top = 132.0
margin_right = 482.0
margin_bottom = 404.0
custom_fonts/normal_font = SubResource( 7 )
bbcode_enabled = true

[node name="Maladie_2" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 544.0
margin_top = 140.0
margin_right = 812.0
margin_bottom = 412.0
custom_fonts/normal_font = SubResource( 8 )
bbcode_enabled = true

[node name="ButtonDiagnositquer" type="Button" parent="."]
margin_left = 271.0
margin_top = 331.0
margin_right = 432.0
margin_bottom = 387.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
text = "Diagnostiquer"

[node name="Liste_Maladie" type="OptionButton" parent="."]
margin_left = 247.0
margin_top = 241.0
margin_right = 451.0
margin_bottom = 273.0

[node name="Label_page1" type="Label" parent="."]
margin_left = 245.0
margin_top = 135.0
margin_right = 457.0
margin_bottom = 198.0
rect_pivot_offset = Vector2( 82, 63 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Choix du diagnostique"
align = 1
autowrap = true

[node name="Label_ListeMaladies" type="Label" parent="."]
margin_left = 554.0
margin_top = 154.0
margin_right = 799.0
margin_bottom = 415.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Liste des Maladie"
align = 1
autowrap = true

[node name="button_next" type="TextureButton" parent="."]
margin_left = 751.0
margin_top = 415.0
margin_right = 801.0
margin_bottom = 465.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )
expand = true

[node name="button_previous" type="TextureButton" parent="."]
margin_left = 231.0
margin_top = 415.0
margin_right = 281.0
margin_bottom = 465.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 6 )
expand = true

[node name="bouton_quiiter" type="TextureButton" parent="."]
margin_left = 783.0
margin_top = 114.0
margin_right = 809.0
margin_bottom = 140.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 9 )
expand = true

[node name="button_accueil" type="TextureButton" parent="."]
margin_left = 426.0
margin_top = 423.0
margin_right = 466.0
margin_bottom = 463.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 11 )
expand = true

[connection signal="pressed" from="ButtonDiagnositquer" to="." method="_on_ButtonDiagnositquer_pressed"]
[connection signal="pressed" from="button_next" to="." method="_on_button_next_pressed"]
[connection signal="pressed" from="button_previous" to="." method="_on_button_previous_pressed"]
[connection signal="pressed" from="bouton_quiiter" to="." method="_on_bouton_quiiter_pressed"]
[connection signal="pressed" from="button_accueil" to="." method="_on_button_accueil_pressed"]
